# llm_model_hub

./: .frontend_pid  .gitignore  .gitmodules  CLAUDE.md  FRONTEND_ERROR_DISPLAY.md  README.md  cloudformation-template-cn.yaml  cloudformation-template-dev.yaml  cloudformation-template.yaml  cn-region-deploy.sh  env.sample  package-lock.json  package.json  pm2run.config.js  restart_all.sh  start_frontend.sh  status_frontend.sh  stop_frontend.sh  upgrade.sh
backend/: .backend_pids  .gitignore  0.setup-cn.sh  01.setup.sh  02.start_backend.sh  03.upgrade.sh  ERROR_HANDLING_IMPROVEMENT.md  README.md  README_en.md  env.sample  logger_config.py  main.py  pyproject.toml  requirements.txt  server.py  status_backend.sh  stop_backend.sh
backend/byoc/: Dockerfile  Dockerfile.sglang  build_and_push.sh  build_and_push_public.sh  build_and_push_sglang.sh  build_and_push_sglang_public.sh  deploy_and_test.ipynb  deploy_and_test_inference_componet.ipynb  deploy_and_test_sglang.ipynb  ecr-policy.json  lmi.ipynb  requirements.txt  serving_engine.py  startup.py
backend/db_management/: database.py  sqlite_helper.py
backend/docker/: Dockerfile  build_and_push.sh  build_and_push_public.sh  ecr-policy.json  entry_multi_nodes.py  entry_single_lora.py  requirements_deps.txt  train.py
backend/docker_easyr1/: Dockerfile  build_and_push.sh  build_and_push_public.sh  requirements_deps.txt  train.py
backend/eks_management/: __init__.py  clusters.py  utils.py
backend/examples/: invoke_endpoint.py  multl-modal-data-preprocessin.ipynb
backend/inference/: endpoint_management.py  model_utils.py  (+6 more)
(+125 files in other folders)
