[project]
name = "llm-model-hub-backend"
version = "0.1.0"
description = "LLM Model Hub - A no-code visual platform for LLM model fine-tuning, deployment, and debugging"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Model Hub Team"}
]

dependencies = [
    "shortuuid",
    "fastapi",
    "uvicorn",
    "pydantic",
    "pytz",
    "transformers>=4.45.0,<=4.51.3,!=4.46.*,!=4.47.*,!=4.48.0",
    "datasets>=2.16.0,<=3.5.0",
    "peft>=0.14.0,<=0.15.1",
    "python-dotenv",
    "mysql-connector-python",
    "sagemaker>=2.244.0,<3.0",
    "PyJWT",
    "sentencepiece",
    "modelscope",
    "tiktoken",
    "kubernetes",
    "boto3>=1.42.2",
    "openai>=1.0.0",
    "httpx>=0.24.0",
]
